refactor to use pgsql
