# docs/swagger.json
@@ -77,7 +77,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/routes.Request"
+                            "$ref": "#/definitions/data.Request"
                         }
                     }
                 ],
@@ -85,7 +85,7 @@
                     "202": {
                         "description": "Accepted",
                         "schema": {
-                            "$ref": "#/definitions/routes.Response"
+                            "$ref": "#/definitions/data.Response"
                         }
                     },
                     "400": {
@@ -113,7 +113,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/routes.CloudWorker"
+                                "$ref": "#/definitions/data.CloudWorker"
                             }
                         }
                     }
@@ -136,7 +136,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/routes.CloudWorkerRequest"
+                                "$ref": "#/definitions/data.CloudWorkerRequest"
                             }
                         }
                     }
@@ -145,7 +145,7 @@
         }
     },
     "definitions": {
-        "routes.CloudWorker": {
+        "data.CloudWorker": {
             "type": "object",
             "properties": {
                 "cloud": {
@@ -174,7 +174,7 @@
                 }
             }
         },
-        "routes.CloudWorkerRequest": {
+        "data.CloudWorkerRequest": {
             "type": "object",
             "properties": {
                 "cloud": {
@@ -187,7 +187,7 @@
                 }
             }
         },
-        "routes.Request": {
+        "data.Request": {
             "type": "object",
             "properties": {
                 "reverse": {
@@ -208,7 +208,7 @@
                 }
             }
         },
-        "routes.Response": {
+        "data.Response": {
             "type": "object",
             "properties": {
                 "cloudId": {
